--- a/Changes
+++ b/Changes
@@ -1,4 +1,3 @@
----
-version: 0.01
-date:    Wed Jul 18 16:21:46 PDT 2007
-changes: First release
+0.02 Wed Nov 26 23:24:58 PST 2014
+ - First version.
+
