--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.03 Thu Nov 27 01:05:51 PST 2014
+ - Implement the 'core' object
+ - Implement 'list' object
+
 0.02 Wed Nov 26 23:24:58 PST 2014
  - First version.
 
