--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.05 Sun Dec 14 13:17:05 PST 2014
+ - Add LC object
+ - Fix some broken objects
+
 0.04 Fri Nov 28 18:19:24 PST 2014
  - Implement more objects
  - Write more tests
