Import of INGY/inc-0.06.tar.gz from CPAN.
gitpan-cpan-distribution: inc
gitpan-cpan-version:      0.06
gitpan-cpan-path:         INGY/inc-0.06.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.06 Sun Dec 14 13:30:59 PST 2014
+ - Accidentally shipped with XXX
+
 0.05 Sun Dec 14 13:17:05 PST 2014
  - Add LC object
  - Fix some broken objects
